--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# storybook
+storybook-static
+
+# pwa
+public/sw.js
+public/workbox-*.js
